# Satellite-collision-predictor

./: README.md  artifical_ellipse.py  artifical_noise.py  data_worker.py  pyproject.toml  tle_parser.py  trajectory_analysis.py
data/ellipse_data/: ellipse_data_20250801_165221.csv
data/imported_tle/: active_20250801_165221.csv
