[project]
name = "satellite-collision-predictor"
version = "0.1.0"
description = "Satellite collision predictor"
authors = [
    {name = "Артём Струнков",email = "strunkovap@student.bmstu.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "skyfield (>=1.53,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
